# Version-Software

BGR2Gray/: BGR2Gray.cpp  BGR2Gray.h  BGR2Gray_global.h  BinaryThresholdTool.cpp  BinaryThresholdTool.h  CMakeLists.txt  FaceDatabase.cpp  FaceDatabase.h  FaceDetect.cpp  FaceDetect.h  FastMTCNN.cpp  FastMTCNN.h  Filter.cpp  Filter.h  Gray2BGR.cpp  Gray2BGR.h  Manager.cpp  Manager.h  Outputs.cpp  Outputs.h  SphereFaceRecognizer.cpp  SphereFaceRecognizer.h  TemMatcher.cpp  TemMatcher.h
Basic/: Basic_global.h  CMakeLists.txt  ImageViewer.cpp  ImageViewer.cpp.PzZkFv  ImageViewer.h  OutPutsBase.cpp  OutPutsBase.h  ToolsBase.cpp  ToolsBase.h  managerbase.cpp  managerbase.h
Camera/: CMakeLists.txt  CameraBase.cpp  CameraBase.h  CameraManager.cpp  CameraManager.h  Camera_global.h
ImageLoad/: CMakeLists.txt  CameraTool.cpp  CameraTool.h  ImageLoad_global.h  Manager.cpp  Manager.h
MainWindow/: CMakeLists.txt  CameraSettingsDialog.cpp  CameraSettingsDialog.h  CameraSettingsDialog.ui  FaceDetectSetting.cpp  FaceDetectSetting.h  FaceDetectSetting.ui  FilterSetting.cpp  FilterSetting.h  FilterSetting.ui  IndexDelegate.cpp  IndexDelegate.h  InputConfigDialog.cpp  InputConfigDialog.h  InputConfigDialog.ui  MainWindow_global.h  ROIOptionBox.cpp  ROIOptionBox.h  ROIOptionBox.ui  TemMatcherSetting.cpp  TemMatcherSetting.h  TemMatcherSetting.ui  ThresholdDialog.cpp  ThresholdDialog.h  ThresholdDialog.ui  ToolsFlow.cpp  ToolsFlow.h  form.cpp  form.h  form.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  toolitem.cpp  toolitem.h
OpenCVCamera/: CMakeLists.txt  OpenCVCamera.cpp  OpenCVCamera.h  OpenCVCameraManager.cpp  OpenCVCameraManager.h  OpenCVCamera_global.h
TestView/: CMakeLists.txt  main.cpp
